Fix who-can on iPhone

--- a/assets/_sass/views/_index.scss
+++ b/assets/_sass/views/_index.scss
@@ -429,6 +429,20 @@
   .wrap {
     padding-top: 20px;
   }
+  @include media($tablet) {
+    max-height: 100%;
+    min-height: 40%;
+    padding: 50px 0;
+    .wrap {
+      padding-top: 0;
+    }
+  }
+  // @include media($iphone-4) {
+  //   min-height: 50% !important;
+  //   .wrap {
+  //     padding-top: 0;
+  //   }
+  // }
 }
 
 .tabs {
